--- a/about.html
+++ b/about.html
@@ -579,7 +579,7 @@
 
       <div class="actions">
         <a
-          href="/contact.html#contact-form"
+          href="/booking.html"
           class="btn-solid free-booking"
           data-analytics="cta_book_strategy_call"
           >Book Strategy Call</a
@@ -1526,7 +1526,7 @@
       <div class="faqs-footer">
         <h4>Still have questions?</h4>
         <p>Our team is ready to provide detailed insights</p>
-        <a href="contact.html" class="btn-solid">Contact</a>
+        <a href="/contact.html" class="btn-solid">Contact</a>
       </div>
     </section>
 
