--- a/business-development/corporate-branding.html
+++ b/business-development/corporate-branding.html
@@ -546,7 +546,7 @@
 
       <div class="actions">
         <a
-          href="/contact.html#contact-form"
+          href="/booking.html"
           class="btn-solid free-booking"
           data-analytics="cta_book_strategy_call"
           >Book Strategy Call</a
@@ -788,8 +788,8 @@
         supports your strategy—not just your visuals.
       </p>
       <div class="hero-links">
-        <a href="booking.html" class="btn-solid">Book Strategy Call</a>
-        <a href="contact.html" class="btn-ghost">Request Proposal</a>
+        <a href="/booking.html" class="btn-solid">Book Strategy Call</a>
+        <a href="/contact.html" class="btn-ghost">Request Proposal</a>
       </div>
 
       <div class="horizontal-carousel-container" aria-hidden="true">
@@ -911,8 +911,8 @@
             strategic asset—not just a logo refresh or campaign theme.
           </p>
           <div data-aos="fade-up" data-aos="fade-down">
-            <a href="booking.html" class="btn-solid">Book Strategy Call</a>
-            <a href="contact.html" class="btn-ghost">Request Proposal</a>
+            <a href="/booking.html" class="btn-solid">Book Strategy Call</a>
+            <a href="/contact.html" class="btn-ghost">Request Proposal</a>
           </div>
         </div>
 
@@ -1029,8 +1029,8 @@
       </div>
 
       <div data-aos="fade-up" data-aos="fade-down">
-        <a href="booking.html" class="btn-solid">Book Strategy Call</a>
-        <a href="contact.html" class="btn-ghost">Request Proposal</a>
+        <a href="/booking.html" class="btn-solid">Book Strategy Call</a>
+        <a href="/contact.html" class="btn-ghost">Request Proposal</a>
       </div>
     </section>
 
@@ -1067,7 +1067,7 @@
 
             <div class="solution-actions">
               <a
-                href="booking.html"
+                href="/booking.html"
                 class="btn-outline"
                 aria-label="Book a brand discovery and insight session"
                 >Book discovery</a
@@ -1222,7 +1222,7 @@
                 >View toolkit</a
               >
               <a
-                href="booking.html"
+                href="/booking.html"
                 class="link-arrow"
                 aria-label="Discuss roll-out and refinement support"
               >
@@ -1297,7 +1297,7 @@
         <a
           data-aos="fade-up"
           data-aos="fade-down"
-          href="booking.html"
+          href="/booking.html"
           class="btn-solid"
           >Book now</a
         >
@@ -1365,7 +1365,7 @@
         <a
           data-aos="fade-up"
           data-aos="fade-down"
-          href="booking.html"
+          href="/booking.html"
           class="btn-solid"
           >Discuss an engagement</a
         >
@@ -1385,7 +1385,7 @@
             internal communication.
           </p>
         </div>
-        <a class="btn-solid" href="booking.html">View more</a>
+        <a class="btn-solid" href="/booking.html">View more</a>
       </div>
 
       <div data-aos="fade-up" data-aos="fade-down" class="carousel-container">
@@ -1414,7 +1414,7 @@
               A clear articulation of your brand promise, pillars, audience
               segments and positioning that can guide decision-making.
             </p>
-            <a href="booking.html" class="card-link"
+            <a href="/booking.html" class="card-link"
               >View outline <i class="fas fa-chevron-right" aria-hidden="true"></i
             ></a>
           </div>
@@ -1445,7 +1445,7 @@
               Practical guidelines covering logo usage, colour, typography,
               imagery, tone of voice and examples across key applications.
             </p>
-            <a href="booking.html" class="card-link"
+            <a href="/booking.html" class="card-link"
               >Explore <i class="fas fa-chevron-right" aria-hidden="true"></i
             ></a>
           </div>
@@ -1476,7 +1476,7 @@
               On-brand templates for presentations, proposals, reports and
               social media, plus guidance for internal brand roll-out.
             </p>
-            <a href="booking.html" class="card-link"
+            <a href="/booking.html" class="card-link"
               >Details <i class="fas fa-chevron-right" aria-hidden="true"></i
             ></a>
           </div>
@@ -1513,7 +1513,7 @@
               </p>
 
               <a
-                href="booking.html"
+                href="/booking.html"
                 class="action-link"
                 aria-label="Analyze improvements in market perception"
               >
@@ -1541,7 +1541,7 @@
               </p>
 
               <a
-                href="booking.html"
+                href="/booking.html"
                 class="action-link"
                 aria-label="View impact on brand consistency"
               >
@@ -1569,7 +1569,7 @@
               </p>
 
               <a
-                href="booking.html"
+                href="/booking.html"
                 class="action-link"
                 aria-label="Explore improvements in stakeholder trust"
               >
@@ -1651,7 +1651,7 @@
         <div class="faqs-footer">
           <h3>Need more clarity?</h3>
           <p>Let’s discuss the right Corporate Branding engagement for you.</p>
-          <a href="contact.html" class="btn-solid">Contact</a>
+          <a href="/contact.html" class="btn-solid">Contact</a>
         </div>
       </div>
     </section>
@@ -1696,8 +1696,8 @@
       </p>
 
       <div data-aos="fade-up" data-aos="fade-down" class="cta-calls" id="cta-calls">
-        <a href="booking.html" class="btn-solid">Book a session</a>
-        <a href="contact.html" class="btn-ghost">Request Proposal</a>
+        <a href="/booking.html" class="btn-solid">Book a session</a>
+        <a href="/contact.html" class="btn-ghost">Request Proposal</a>
       </div>
     </section>
 
