--- a/contact.html
+++ b/contact.html
@@ -539,7 +539,7 @@
 
       <div class="actions">
         <a
-          href="/contact.html#contact-form"
+          href="/booking.html"
           class="btn-solid free-booking"
           data-analytics="cta_book_strategy_call"
           >Book Strategy Call</a
@@ -1063,13 +1063,13 @@
 
       <div data-aos="fade-up" data-aos="fade-down" class="cta-calls" id="cta-calls">
         <a
-          href="booking.html"
+          href="/booking.html"
           class="btn-solid"
           data-analytics="cta_book_strategy_call"
           >Book a Call</a
         >
         <a
-          href="contact.html"
+          href="/contact.html"
           class="btn-ghost"
           data-analytics="cta_request_proposal"
           >Request Proposal</a
