--- a/index.html
+++ b/index.html
@@ -406,7 +406,7 @@
     </nav>
 
     <div class="actions">
-      <a href="/contact.html#contact-form" class="btn-solid free-booking" data-analytics="cta_book_strategy_call">Book Strategy
+      <a href="/booking.html" class="btn-solid free-booking" data-analytics="cta_book_strategy_call">Book Strategy
         Call</a>
       <a href="/proposal.html" class="btn-ghost" data-analytics="cta_request_proposal">Request Proposal</a>
       <button type="button" id="menu-btn" class="btn menu-btn" aria-controls="mobile-nav" aria-expanded="false"
@@ -622,7 +622,7 @@
       performance improvements.
     </p>
     <div data-aos="fade-up" data-aos="fade-down" class="hero-links">
-      <a href="booking.html" class="btn-solid" data-analytics="cta_book_strategy_call">Book Strategy Call</a>
+      <a href="/booking.html" class="btn-solid" data-analytics="cta_book_strategy_call">Book Strategy Call</a>
       <a href="proposal.html" class="btn-ghost" data-analytics="cta_request_proposal">Request Proposal</a>
     </div>
 
@@ -891,7 +891,7 @@
               </div>
             </div>
             <div data-aos="fade-up" data-aos="fade-down" class="actions">
-              <a href="booking.html" class="btn-solid" data-analytics="cta_book_strategy_call">Book Strategy Call</a>
+              <a href="/booking.html" class="btn-solid" data-analytics="cta_book_strategy_call">Book Strategy Call</a>
               <a href="proposal.html" class="btn-ghost" data-analytics="cta_request_proposal">Request Proposal</a>
             </div>
           </div>
@@ -915,7 +915,7 @@
             verification, and stress-free payroll so teams can thrive.
           </p>
         </div>
-        <a class="btn-solid" href="/service/talent-management-hr.html">View more</a>
+        <a class="btn-solid" href="/services/talent-management-hr-solution.html">View more</a>
       </div>
     </div>
 
@@ -1001,7 +1001,7 @@
           structures, and execution that delivers measurable results.
         </p>
       </div>
-      <a class="btn-solid" href="/service/business-strategy.html">View more</a>
+      <a class="btn-solid" href="/services/business-development-strategy.html">View more</a>
     </div>
 
     <div data-aos="fade-up" data-aos="fade-down" class="carousel-container">
@@ -1084,7 +1084,7 @@
           sticks and moves the numbers.
         </p>
       </div>
-      <a class="btn-solid" href="/training.html">View more</a>
+      <a class="btn-solid" href="/services/professional-training-programme.html">View more</a>
     </div>
 
     <div data-aos="fade-up" data-aos="fade-down" class="carousel-container">
@@ -1435,7 +1435,7 @@
     </p>
 
     <div data-aos="fade-up" data-aos="fade-down" class="cta-calls" id="cta-calls">
-      <a href="booking.html" class="btn-solid" data-analytics="cta_book_strategy_call">Book Strategy Call</a>
+      <a href="/booking.html" class="btn-solid" data-analytics="cta_book_strategy_call">Book Strategy Call</a>
       <a href="proposal.html" class="btn-ghost" data-analytics="cta_request_proposal">Request Proposal</a>
     </div>
   </section>
