--- a/service.html
+++ b/service.html
@@ -407,7 +407,7 @@
 
       <div class="actions">
         <a
-          href="/contact.html#contact-form"
+          href="/booking.html"
           class="btn-solid free-booking"
           data-analytics="cta_book_strategy_call"
           >Book Strategy Call</a
@@ -636,8 +636,8 @@
         strategy, and professional training across Africa and beyond.
       </p>
       <div data-aos="fade-up" data-aos="fade-down" class="hero-links">
-        <a href="booking.html" class="btn-solid">Book Strategy Call</a>
-        <a href="contact.html" class="btn-ghost">Request Proposal</a>
+        <a href="/booking.html" class="btn-solid">Book Strategy Call</a>
+        <a href="/contact.html" class="btn-ghost">Request Proposal</a>
       </div>
 
       <div class="horizontal-carousel-container">
@@ -1331,7 +1331,7 @@
       <div class="faqs-footer">
         <h4>Still have questions?</h4>
         <p>Our team is ready to provide detailed insights</p>
-        <a href="contact.html" class="btn-solid">Contact</a>
+        <a href="/contact.html" class="btn-solid">Contact</a>
       </div>
     </section>
 
@@ -1345,8 +1345,8 @@
       </p>
 
       <div data-aos="fade-up" data-aos="fade-down" class="cta-calls" id="cta-calls">
-        <a href="booking.html" class="btn-solid">Book a Call</a>
-        <a href="contact.html" class="btn-ghost">Request Proposal</a>
+        <a href="/booking.html" class="btn-solid">Book a Call</a>
+        <a href="/contact.html" class="btn-ghost">Request Proposal</a>
       </div>
     </section>
 
