--- a/talent-management-hr-solution/career-service.html
+++ b/talent-management-hr-solution/career-service.html
@@ -552,7 +552,7 @@
 
       <div class="actions">
         <a
-          href="/contact.html#contact-form"
+          href="/booking.html"
           class="btn-solid free-booking"
           data-analytics="cta_book_strategy_call"
           >Book Strategy Call</a
@@ -796,8 +796,8 @@
         confidently for the roles you truly want.
       </p>
       <div class="hero-links">
-        <a href="booking.html" class="btn-solid">Book Strategy Call</a>
-        <a href="contact.html" class="btn-ghost">Request Proposal</a>
+        <a href="/booking.html" class="btn-solid">Book Strategy Call</a>
+        <a href="/contact.html" class="btn-ghost">Request Proposal</a>
       </div>
 
       <div class="horizontal-carousel-container" aria-hidden="true">
@@ -922,8 +922,8 @@
             forward.
           </p>
           <div data-aos="fade-up" data-aos="fade-down">
-            <a href="booking.html" class="btn-solid">Book Strategy Call</a>
-            <a href="contact.html" class="btn-ghost">Request Proposal</a>
+            <a href="/booking.html" class="btn-solid">Book Strategy Call</a>
+            <a href="/contact.html" class="btn-ghost">Request Proposal</a>
           </div>
         </div>
 
@@ -1049,8 +1049,8 @@
       </div>
 
       <div data-aos="fade-up" data-aos="fade-down">
-        <a href="booking.html" class="btn-solid">Book Strategy Call</a>
-        <a href="contact.html" class="btn-ghost">Request Proposal</a>
+        <a href="/booking.html" class="btn-solid">Book Strategy Call</a>
+        <a href="/contact.html" class="btn-ghost">Request Proposal</a>
       </div>
     </section>
 
@@ -1087,7 +1087,7 @@
 
             <div class="solution-actions">
               <a
-                href="booking.html"
+                href="/booking.html"
                 class="btn-outline"
                 aria-label="Book a career clarity session"
                 >Book a clarity call</a
@@ -1243,7 +1243,7 @@
                 >View toolkit</a
               >
               <a
-                href="booking.html"
+                href="/booking.html"
                 class="link-arrow"
                 aria-label="Explore job search systems support"
               >
@@ -1320,7 +1320,7 @@
         <a
           data-aos="fade-up"
           data-aos="fade-down"
-          href="booking.html"
+          href="/booking.html"
           class="btn-solid"
           >Book now</a
         >
@@ -1394,7 +1394,7 @@
         <a
           data-aos="fade-up"
           data-aos="fade-down"
-          href="booking.html"
+          href="/booking.html"
           class="btn-solid"
           >Book now</a
         >
@@ -1414,7 +1414,7 @@
             using long after our work together ends.
           </p>
         </div>
-        <a class="btn-solid" href="booking.html">View more</a>
+        <a class="btn-solid" href="/booking.html">View more</a>
       </div>
 
       <div data-aos="fade-up" data-aos="fade-down" class="carousel-container">
@@ -1443,7 +1443,7 @@
               achievements, progression and strengths in a modern, clean
               format.
             </p>
-            <a href="booking.html" class="card-link"
+            <a href="/booking.html" class="card-link"
               >Explore <i class="fas fa-chevron-right" aria-hidden="true"></i
             ></a>
           </div>
@@ -1474,7 +1474,7 @@
               results—ready to plug into interviews, networking and performance
               reviews.
             </p>
-            <a href="booking.html" class="card-link"
+            <a href="/booking.html" class="card-link"
               >Download <i class="fas fa-chevron-right" aria-hidden="true"></i
             ></a>
           </div>
@@ -1504,7 +1504,7 @@
               Practical templates, trackers and outreach scripts that keep your
               applications organised and your follow-up consistent.
             </p>
-            <a href="booking.html" class="card-link"
+            <a href="/booking.html" class="card-link"
               >Details <i class="fas fa-chevron-right" aria-hidden="true"></i
             ></a>
           </div>
@@ -1542,7 +1542,7 @@
               </p>
 
               <a
-                href="booking.html"
+                href="/booking.html"
                 class="action-link"
                 aria-label="Analyze interview outcomes"
               >
@@ -1570,7 +1570,7 @@
               </p>
 
               <a
-                href="booking.html"
+                href="/booking.html"
                 class="action-link"
                 aria-label="View narrative impact"
               >
@@ -1598,7 +1598,7 @@
               </p>
 
               <a
-                href="booking.html"
+                href="/booking.html"
                 class="action-link"
                 aria-label="Analyze interview effectiveness"
               >
@@ -1682,7 +1682,7 @@
         <div class="faqs-footer">
           <h3>Need more clarity?</h3>
           <p>Let’s discuss the right Career Services package for you.</p>
-          <a href="contact.html" class="btn-solid">Contact</a>
+          <a href="/contact.html" class="btn-solid">Contact</a>
         </div>
       </div>
     </section>
@@ -1731,8 +1731,8 @@
       </p>
 
       <div data-aos="fade-up" data-aos="fade-down" class="cta-calls" id="cta-calls">
-        <a href="booking.html" class="btn-solid">Book a session</a>
-        <a href="contact.html" class="btn-ghost">Request Proposal</a>
+        <a href="/booking.html" class="btn-solid">Book a session</a>
+        <a href="/contact.html" class="btn-ghost">Request Proposal</a>
       </div>
     </section>
 
