--- a/talent-management-hr-solution/recruitment-selection.html
+++ b/talent-management-hr-solution/recruitment-selection.html
@@ -551,7 +551,7 @@
 
       <div class="actions">
         <a
-          href="/contact.html#contact-form"
+          href="/booking.html"
           class="btn-solid free-booking"
           data-analytics="cta_book_strategy_call"
           >Book Strategy Call</a
@@ -794,8 +794,8 @@
         that perform over the long term.
       </p>
       <div class="hero-links">
-        <a href="booking.html" class="btn-solid">Book Strategy Call</a>
-        <a href="contact.html" class="btn-ghost">Request Proposal</a>
+        <a href="/booking.html" class="btn-solid">Book Strategy Call</a>
+        <a href="/contact.html" class="btn-ghost">Request Proposal</a>
       </div>
 
       <div class="horizontal-carousel-container" aria-hidden="true">
@@ -918,8 +918,8 @@
             roles”.
           </p>
           <div data-aos="fade-up" data-aos="fade-down">
-            <a href="booking.html" class="btn-solid">Book Strategy Call</a>
-            <a href="contact.html" class="btn-ghost">Request Proposal</a>
+            <a href="/booking.html" class="btn-solid">Book Strategy Call</a>
+            <a href="/contact.html" class="btn-ghost">Request Proposal</a>
           </div>
         </div>
 
@@ -1035,8 +1035,8 @@
       </div>
 
       <div data-aos="fade-up" data-aos="fade-down">
-        <a href="booking.html" class="btn-solid">Book Strategy Call</a>
-        <a href="contact.html" class="btn-ghost">Request Proposal</a>
+        <a href="/booking.html" class="btn-solid">Book Strategy Call</a>
+        <a href="/contact.html" class="btn-ghost">Request Proposal</a>
       </div>
     </section>
 
@@ -1072,7 +1072,7 @@
 
             <div class="solution-actions">
               <a
-                href="booking.html"
+                href="/booking.html"
                 class="btn-outline"
                 aria-label="Book a recruitment discovery session"
                 >Book discovery call</a
@@ -1230,7 +1230,7 @@
                 >View toolkit</a
               >
               <a
-                href="booking.html"
+                href="/booking.html"
                 class="link-arrow"
                 aria-label="Discuss ongoing recruitment improvement with CICL"
               >
@@ -1307,7 +1307,7 @@
         <a
           data-aos="fade-up"
           data-aos="fade-down"
-          href="booking.html"
+          href="/booking.html"
           class="btn-solid"
           >Book now</a
         >
@@ -1378,7 +1378,7 @@
         <a
           data-aos="fade-up"
           data-aos="fade-down"
-          href="booking.html"
+          href="/booking.html"
           class="btn-solid"
           >Discuss an engagement</a
         >
@@ -1398,7 +1398,7 @@
             searches.
           </p>
         </div>
-        <a class="btn-solid" href="booking.html">View more</a>
+        <a class="btn-solid" href="/booking.html">View more</a>
       </div>
 
       <div data-aos="fade-up" data-aos="fade-down" class="carousel-container">
@@ -1427,7 +1427,7 @@
               Clear, outcomes-based role scorecards and job descriptions that
               align expectations for candidates, hiring managers and HR.
             </p>
-            <a href="booking.html" class="card-link"
+            <a href="/booking.html" class="card-link"
               >Explore <i class="fas fa-chevron-right" aria-hidden="true"></i
             ></a>
           </div>
@@ -1458,7 +1458,7 @@
               Competency-based interview guides, scoring sheets and case tasks
               that keep panels aligned and decisions evidence-driven.
             </p>
-            <a href="booking.html" class="card-link"
+            <a href="/booking.html" class="card-link"
               >View sample
               <i class="fas fa-chevron-right" aria-hidden="true"></i
             ></a>
@@ -1490,7 +1490,7 @@
               Comparative candidate reports, process notes and key metrics that
               provide a clear audit trail and lessons for future mandates.
             </p>
-            <a href="booking.html" class="card-link"
+            <a href="/booking.html" class="card-link"
               >Details <i class="fas fa-chevron-right" aria-hidden="true"></i
             ></a>
           </div>
@@ -1527,7 +1527,7 @@
               </p>
 
               <a
-                href="booking.html"
+                href="/booking.html"
                 class="action-link"
                 aria-label="Analyze impact on time-to-hire"
               >
@@ -1555,7 +1555,7 @@
               </p>
 
               <a
-                href="booking.html"
+                href="/booking.html"
                 class="action-link"
                 aria-label="Review quality-of-hire outcomes with CICL"
               >
@@ -1583,7 +1583,7 @@
               </p>
 
               <a
-                href="booking.html"
+                href="/booking.html"
                 class="action-link"
                 aria-label="Explore candidate experience improvements"
               >
@@ -1670,7 +1670,7 @@
         <div class="faqs-footer">
           <h3>Need more clarity?</h3>
           <p>Let’s discuss the right Recruitment &amp; Selection support.</p>
-          <a href="contact.html" class="btn-solid">Contact</a>
+          <a href="/contact.html" class="btn-solid">Contact</a>
         </div>
       </div>
     </section>
@@ -1720,8 +1720,8 @@
       </p>
 
       <div data-aos="fade-up" data-aos="fade-down" class="cta-calls" id="cta-calls">
-        <a href="booking.html" class="btn-solid">Book a session</a>
-        <a href="contact.html" class="btn-ghost">Request Proposal</a>
+        <a href="/booking.html" class="btn-solid">Book a session</a>
+        <a href="/contact.html" class="btn-ghost">Request Proposal</a>
       </div>
     </section>
 
