--- a/talent-management-hr-solution/training-development.html
+++ b/talent-management-hr-solution/training-development.html
@@ -551,7 +551,7 @@
 
       <div class="actions">
         <a
-          href="/contact.html#contact-form"
+          href="/booking.html"
           class="btn-solid free-booking"
           data-analytics="cta_book_strategy_call"
           >Book Strategy Call</a
@@ -793,8 +793,8 @@
         learning experiences that build real capability, not just certificates.
       </p>
       <div class="hero-links">
-        <a href="booking.html" class="btn-solid">Book Strategy Call</a>
-        <a href="contact.html" class="btn-ghost">Request Proposal</a>
+        <a href="/booking.html" class="btn-solid">Book Strategy Call</a>
+        <a href="/contact.html" class="btn-ghost">Request Proposal</a>
       </div>
 
       <div class="horizontal-carousel-container" aria-hidden="true">
@@ -917,8 +917,8 @@
             growth—not just tick a box.
           </p>
           <div data-aos="fade-up" data-aos="fade-down">
-            <a href="booking.html" class="btn-solid">Book Strategy Call</a>
-            <a href="contact.html" class="btn-ghost">Request Proposal</a>
+            <a href="/booking.html" class="btn-solid">Book Strategy Call</a>
+            <a href="/contact.html" class="btn-ghost">Request Proposal</a>
           </div>
         </div>
 
@@ -1034,8 +1034,8 @@
       </div>
 
       <div data-aos="fade-up" data-aos="fade-down">
-        <a href="booking.html" class="btn-solid">Book Strategy Call</a>
-        <a href="contact.html" class="btn-ghost">Request Proposal</a>
+        <a href="/booking.html" class="btn-solid">Book Strategy Call</a>
+        <a href="/contact.html" class="btn-ghost">Request Proposal</a>
       </div>
     </section>
 
@@ -1071,7 +1071,7 @@
 
             <div class="solution-actions">
               <a
-                href="booking.html"
+                href="/booking.html"
                 class="btn-outline"
                 aria-label="Book a training discovery session"
                 >Book discovery call</a
@@ -1229,7 +1229,7 @@
                 >View toolkit</a
               >
               <a
-                href="booking.html"
+                href="/booking.html"
                 class="link-arrow"
                 aria-label="Discuss a learning roadmap or internal academy with CICL"
               >
@@ -1304,7 +1304,7 @@
         <a
           data-aos="fade-up"
           data-aos="fade-down"
-          href="booking.html"
+          href="/booking.html"
           class="btn-solid"
           >Book now</a
         >
@@ -1375,7 +1375,7 @@
         <a
           data-aos="fade-up"
           data-aos="fade-down"
-          href="booking.html"
+          href="/booking.html"
           class="btn-solid"
           >Discuss an engagement</a
         >
@@ -1395,7 +1395,7 @@
             sessions end.
           </p>
         </div>
-        <a class="btn-solid" href="booking.html">View more</a>
+        <a class="btn-solid" href="/booking.html">View more</a>
       </div>
 
       <div data-aos="fade-up" data-aos="fade-down" class="carousel-container">
@@ -1424,7 +1424,7 @@
               Structured facilitator notes, slide decks and timing guides that
               make each session clear, interactive and on-brief.
             </p>
-            <a href="booking.html" class="card-link"
+            <a href="/booking.html" class="card-link"
               >Explore <i class="fas fa-chevron-right" aria-hidden="true"></i
             ></a>
           </div>
@@ -1455,7 +1455,7 @@
               Workbooks, checklists and templates that participants can adapt to
               their own roles and projects.
             </p>
-            <a href="booking.html" class="card-link"
+            <a href="/booking.html" class="card-link"
               >View sample
               <i class="fas fa-chevron-right" aria-hidden="true"></i
             ></a>
@@ -1487,7 +1487,7 @@
               Concise reports summarising participation, feedback and key
               learnings—with recommendations for future cycles and support.
             </p>
-            <a href="booking.html" class="card-link"
+            <a href="/booking.html" class="card-link"
               >Details <i class="fas fa-chevron-right" aria-hidden="true"></i
             ></a>
           </div>
@@ -1523,7 +1523,7 @@
               </p>
 
               <a
-                href="booking.html"
+                href="/booking.html"
                 class="action-link"
                 aria-label="Analyze capability improvements"
               >
@@ -1551,7 +1551,7 @@
               </p>
 
               <a
-                href="booking.html"
+                href="/booking.html"
                 class="action-link"
                 aria-label="Explore performance improvements from training"
               >
@@ -1579,7 +1579,7 @@
               </p>
 
               <a
-                href="booking.html"
+                href="/booking.html"
                 class="action-link"
                 aria-label="Review engagement and retention outcomes"
               >
@@ -1665,7 +1665,7 @@
         <div class="faqs-footer">
           <h3>Need more clarity?</h3>
           <p>Let’s discuss the right Training &amp; Development approach.</p>
-          <a href="contact.html" class="btn-solid">Contact</a>
+          <a href="/contact.html" class="btn-solid">Contact</a>
         </div>
       </div>
     </section>
@@ -1714,8 +1714,8 @@
       </p>
 
       <div data-aos="fade-up" data-aos="fade-down" class="cta-calls" id="cta-calls">
-        <a href="booking.html" class="btn-solid">Book a session</a>
-        <a href="contact.html" class="btn-ghost">Request Proposal</a>
+        <a href="/booking.html" class="btn-solid">Book a session</a>
+        <a href="/contact.html" class="btn-ghost">Request Proposal</a>
       </div>
     </section>
 
