--- a/talent-management-hr-solution/talent-payroll-outsourcing.html
+++ b/talent-management-hr-solution/talent-payroll-outsourcing.html
@@ -548,7 +548,7 @@
 
       <div class="actions">
         <a
-          href="/contact.html#contact-form"
+          href="/booking.html"
           class="btn-solid free-booking"
           data-analytics="cta_book_strategy_call"
           >Book Strategy Call</a
@@ -791,8 +791,8 @@
         growth.
       </p>
       <div class="hero-links">
-        <a href="booking.html" class="btn-solid">Book Strategy Call</a>
-        <a href="contact.html" class="btn-ghost">Request Proposal</a>
+        <a href="/booking.html" class="btn-solid">Book Strategy Call</a>
+        <a href="/contact.html" class="btn-ghost">Request Proposal</a>
       </div>
 
       <div class="horizontal-carousel-container" aria-hidden="true">
@@ -915,8 +915,8 @@
             operational burden internally.
           </p>
           <div data-aos="fade-up" data-aos="fade-down">
-            <a href="booking.html" class="btn-solid">Book Strategy Call</a>
-            <a href="contact.html" class="btn-ghost">Request Proposal</a>
+            <a href="/booking.html" class="btn-solid">Book Strategy Call</a>
+            <a href="/contact.html" class="btn-ghost">Request Proposal</a>
           </div>
         </div>
 
@@ -1033,8 +1033,8 @@
       </div>
 
       <div data-aos="fade-up" data-aos="fade-down">
-        <a href="booking.html" class="btn-solid">Book Strategy Call</a>
-        <a href="contact.html" class="btn-ghost">Request Proposal</a>
+        <a href="/booking.html" class="btn-solid">Book Strategy Call</a>
+        <a href="/contact.html" class="btn-ghost">Request Proposal</a>
       </div>
     </section>
 
@@ -1070,7 +1070,7 @@
 
             <div class="solution-actions">
               <a
-                href="booking.html"
+                href="/booking.html"
                 class="btn-outline"
                 aria-label="Book an assessment for HR and payroll outsourcing"
                 >Book assessment</a
@@ -1225,7 +1225,7 @@
                 >View toolkit</a
               >
               <a
-                href="booking.html"
+                href="/booking.html"
                 class="link-arrow"
                 aria-label="Discuss long-term HR and payroll outsourcing partnership"
               >
@@ -1301,7 +1301,7 @@
         <a
           data-aos="fade-up"
           data-aos="fade-down"
-          href="booking.html"
+          href="/booking.html"
           class="btn-solid"
           >Book now</a
         >
@@ -1370,7 +1370,7 @@
         <a
           data-aos="fade-up"
           data-aos="fade-down"
-          href="booking.html"
+          href="/booking.html"
           class="btn-solid"
           >Discuss an engagement</a
         >
@@ -1389,7 +1389,7 @@
             controls and reporting—so you always know what is happening and why.
           </p>
         </div>
-        <a class="btn-solid" href="booking.html">View more</a>
+        <a class="btn-solid" href="/booking.html">View more</a>
       </div>
 
       <div data-aos="fade-up" data-aos="fade-down" class="carousel-container">
@@ -1418,7 +1418,7 @@
               Clear process documentation and standard operating procedures for
               payroll, HR administration and approvals.
             </p>
-            <a href="booking.html" class="card-link"
+            <a href="/booking.html" class="card-link"
               >Explore <i class="fas fa-chevron-right" aria-hidden="true"></i
             ></a>
           </div>
@@ -1449,7 +1449,7 @@
               Summaries of headcount, payroll costs, overtime, leave and trends
               for HR, finance and leadership.
             </p>
-            <a href="booking.html" class="card-link"
+            <a href="/booking.html" class="card-link"
               >View sample
               <i class="fas fa-chevron-right" aria-hidden="true"></i
             ></a>
@@ -1481,7 +1481,7 @@
               Evidence of statutory payments, filings and compliance steps to
               support audits, due diligence and investor conversations.
             </p>
-            <a href="booking.html" class="card-link"
+            <a href="/booking.html" class="card-link"
               >Details <i class="fas fa-chevron-right" aria-hidden="true"></i
             ></a>
           </div>
@@ -1517,7 +1517,7 @@
               </p>
 
               <a
-                href="booking.html"
+                href="/booking.html"
                 class="action-link"
                 aria-label="Analyze operational stability outcomes"
               >
@@ -1544,7 +1544,7 @@
               </p>
 
               <a
-                href="booking.html"
+                href="/booking.html"
                 class="action-link"
                 aria-label="Explore leadership focus improvements"
               >
@@ -1571,7 +1571,7 @@
               </p>
 
               <a
-                href="booking.html"
+                href="/booking.html"
                 class="action-link"
                 aria-label="Review compliance and risk outcomes"
               >
@@ -1657,7 +1657,7 @@
         <div class="faqs-footer">
           <h3>Need more clarity?</h3>
           <p>Let’s design an outsourcing model that fits your reality.</p>
-          <a href="contact.html" class="btn-solid">Contact</a>
+          <a href="/contact.html" class="btn-solid">Contact</a>
         </div>
       </div>
     </section>
@@ -1706,8 +1706,8 @@
       </p>
 
       <div data-aos="fade-up" data-aos="fade-down" class="cta-calls" id="cta-calls">
-        <a href="booking.html" class="btn-solid">Book a session</a>
-        <a href="contact.html" class="btn-ghost">Request Proposal</a>
+        <a href="/booking.html" class="btn-solid">Book a session</a>
+        <a href="/contact.html" class="btn-ghost">Request Proposal</a>
       </div>
     </section>
 
